--- a/Web.config
+++ b/Web.config
@@ -38,12 +38,12 @@ providerName="System.Data.SqlClient" />
     <add key="discount" value="10" />
     <add key="shopNewOrderTips" value="您有新的实时订单" />
     <add key="shopNewReserveOrderTips" value="您有新的预定订单" />
-    <add key="wxAppId" value="wxd8482615c33b8859" />
-    <add key="wxMchId" value="1494504712" />
-    <add key="wxMchKey" value="2BCF8DD9490E328D2FCEDE7B26643231" />
+    <add key="wxAppId" value="id" />
+    <add key="wxMchId" value="id" />
+    <add key="wxMchKey" value="s" />
     <add key="takeAwayWebApiHost" value="http://192.168.20.218:8061" />
-    <add key="AliyunAccessKeyId" value="LTAIiwMyjHiQxtPT" />
-    <add key="AliyunAccessKeySecret" value="nPRTlzeOMZ4s4EYULGIZOo5Q1vjsb0" />
+    <add key="AliyunAccessKeyId" value="id" />
+    <add key="AliyunAccessKeySecret" value="ser" />
     <add key="AliyunSignName" value="阿里云短信测试专用" />
     <add key="aliAppId" value="2017120100290167" />
     <add key="alipay_public_key" value="apk" />
